# temporalex

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  mix.exs
.github/workflows/: ci.yml
build_support/: dependency_sources.config.exs  dependency_sources.exs
docs/: persistence.md
guides/introduction/: installation.md
guides/learning/: configuration.md  workflows.md
lib/: temporalex.ex
lib/temporalex/: authority_guard.ex  client.ex  codec.ex  connection.ex  converter.ex  dsl.ex  failure_converter.ex  retry_policy.ex  runtime_policy.ex  server.ex  telemetry.ex  workflow_task_executor.ex
native/temporalex_native/: Cargo.toml
native/temporalex_native/src/: lib.rs
test/temporalex/: activity_compile_test.exs  authority_guard_test.exs  bugfix_review2_test.exs  bugfix_review_test.exs  client_internals_test.exs  client_test.exs  connection_test.exs  dsl_test.exs  ease_of_use_test.exs  executor_test.exs  runtime_policy_test.exs  server_test.exs  source_policy_test.exs  supervisor_test.exs
